--- a/README.qmd
+++ b/README.qmd
@@ -24,31 +24,15 @@ Some howto's below.
 
 To get minimal badge functionality:
 
-1. Attach the screen to the front:
+1. Solder C3, C4
 
-::: {layout-ncol=2 layout-valign="bottom" fig-align="center"}
+![](figs/c3c4.png){width=49% fig-align="center"}
 
-![](figs/screen1.png){}
-
-![](figs/screen2.png){}
-
-:::
-
-2. Attach the AAA battery holder to the back:
-
-::: {layout-ncol=2 layout-valign="bottom" fig-align="center"}
-
-![](figs/battery1.png){}
-
-![](figs/battery2.png){}
-
-:::
-
-3. To protect your PICO from having battery and USB power at the same time, solder Q1:
+2. To protect your PICO from having battery and USB power at the same time, solder Q1:
 
 ![](figs/q1.png){width=49% fig-align="center"}
 
-4. To be able to switch off the batteries, solder SW1:
+3. To be able to switch off the batteries, solder SW1:
 
 ::: {layout-ncol=2 layout-valign="bottom" fig-align="center"}
 
@@ -58,7 +42,27 @@ To get minimal badge functionality:
 
 :::
 
-5. Insert 2xAAA batteries:
+4. Attach the screen to the front:
+
+::: {layout-ncol=2 layout-valign="bottom" fig-align="center"}
+
+![](figs/screen1.png){}
+
+![](figs/screen2.png){}
+
+:::
+
+5. Attach the AAA battery holder to the back:
+
+::: {layout-ncol=2 layout-valign="bottom" fig-align="center"}
+
+![](figs/battery1.png){}
+
+![](figs/battery2.png){}
+
+:::
+
+6. Insert 2xAAA batteries:
 
 ![](figs/battery3.png){width=49% fig-align="center"}
 
@@ -82,17 +86,17 @@ To add GLITCHIFIER9000 functionality:
 
 ![](figs/r2.png){width=49% fig-align="center"}
 
-2. Solder C3, C4
-
-![](figs/c3c4.png){width=49% fig-align="center"}
-
 2. Solder unlabeled SOT8 MOSFET:
 
 ![](figs/sot8.png){width=49% fig-align="center"}
 
+Ready to glitch!
+
 # Talk to the badge over USB
 
 1. Plug in micro-usb cable.
+
+Ready to talk!
 
 ## On Windows
 
@@ -111,6 +115,8 @@ To add GLITCHIFIER9000 functionality:
 4. Type some buttons, see what happens (also try CTRL+C and CTRL+D)
 
 ![](figs/putty4.png){fig-align="center"}
+
+Ready to talk!
 
 ## On Linux
 
